[metadata]
name = qe_tools
author = RBA QE Team
author-email = rba-qe@rackspace.com
summary = General tools for use among Rackspace QE teams
description-file = README.md
home-page = https://github.rackspace.com/AutomationServices/QE-Tools
classifier =
    Development Status :: 5 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
[extras]
httpbin-data =
    click==6.7
    decorator==4.0.11
    Flask==0.12
    httpbin==0.5.0
    itsdangerous==0.24
    Jinja2==2.9.5
    MarkupSafe==0.23
    six==1.10.0
    Werkzeug==0.11.15
    python-etcd==0.4.5
pr-checker =
    certifi==2017.4.17
    chardet==3.0.4
    github3.py==0.9.6
    idna==2.5
    requests==2.18.1
    uritemplate==3.0.0
    uritemplate.py==3.0.2
    urllib3==1.21.1
