[metadata]
name = qe_tools
author = Rackspace QE
author-email = qe-tools-contributors@rackspace.com
summary = General tools for use among Rackspace QE teams
home-page = https://github.rackspace.com/QualityEngineering/QE-Tools
classifier =
    Development Status :: 5 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
[extras]
httpbin-data =
    click==6.7
    decorator==4.0.11
    Flask==0.12
    httpbin==0.5.0
    itsdangerous==0.24
    Jinja2==2.9.5
    MarkupSafe==0.23
    six==1.10.0
    Werkzeug==0.11.15
    python-etcd==0.4.5
[tool:pytest]
testpaths=qecommon_tools/tests qe_logging/tests
